--- a/index2.html
+++ b/index2.html
@@ -359,7 +359,7 @@
 
     <section class="container mt-5">
             <h5>Prototype</h5>
-            <img src="images/persona.png" class="img-fluid expandable-image" alt="Image 1">
+            <img src="images/gobuddyprototype (2).gif" class="img-fluid expandable-image" alt="Image 1">
 
 
 
