--- a/index2.html
+++ b/index2.html
@@ -67,16 +67,9 @@
                             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                                 <ul class="navbar-nav">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Work</a>
+                                        <a class="nav-link" href="https://klhorne.github.io/UX_UI_HW_19/">Home</a>
                                     </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">About</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Resume</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Contact</a>
+                                   
                                     </li>
                                 </ul>
                             </div>
