--- a/index2.html
+++ b/index2.html
@@ -254,7 +254,7 @@
         <img src="images/persona.png" class="img-fluid expandable-image" alt="Image 1">
 
         <h5>User Journey & Storyboard</h5>
-        <p> I  mapped out the Cassie’s journey via a storyboard. 
+        <p> I  mapped out Cassie's journey via a storyboard. 
             This allowed me to visualize her life and what interactions 
             she will experience using GoBuddy. 
         </p>
@@ -277,7 +277,7 @@
 
         <section class="container mt-5">
        <div> <h5>User Flow</h5>
-        <p>After gaining a clear understanding of Cassie’s path, I focused on mapping out her happy path. After I was able to dig deeper into the process and created a second iteration of the user flow mpa.</p>
+        <p>After gaining a clear understanding of Cassie's path, I focused on mapping out her happy path. After I was able to dig deeper into the process and created a second iteration of the user flow mpa.</p>
         <p>User Flow Iteration 1 </p>
         <img src="images/userflow1.png" class="img-fluid expandable-image" alt="Image 1">
         <p>User Flow Iteration 2 </p>
